--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,18 @@
 {
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/db.json",
+      "dest": "/db.json",
+      "headers": {
+        "Content-Type": "application/json"
+      }
     }
   ]
 }
