--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-router-dom": "^7.6.0",
 		"react-toastify": "^11.0.5",
 		"toastify": "^2.0.1",
+		"vercel": "^42.1.1",
 		"zod": "^3.25.28"
 	},
 	"devDependencies": {
