--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,32 @@
 {
-  "rewrites": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "destination": "/index.html"
+      "src": "package.json",
+      "use": "@vercel/static-build"
+    }
+  ],
+  "routes": [
+
+    {
+      "src": "/assets/(.*)",
+      "headers": {
+        "Cache-Control": "public, max-age=31536000, immutable"
+      },
+      "continue": true
+    },
+
+    {
+      "src": "/api/db.json",
+      "dest": "/db.json",
+      "headers": {
+        "Content-Type": "application/json"
+      }
+    },
+
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ]
 }
-
-  
