--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"axios": "^1.9.0",
 		"concurrently": "^9.1.2",
 		"json-server": "^0.17.4",
+		"json-server-auth": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-hook-form": "^7.56.4",
